// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should raise errors with invalid.css 1`] = `
[
  [
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 6,
      "line": 6,
      "rule": "alpha-value-notation",
      "severity": "error",
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 6,
      "line": 6,
      "rule": "color-function-notation",
      "severity": "error",
    },
    {
      "column": 3,
      "endColumn": 17,
      "endLine": 2,
      "line": 2,
      "rule": "custom-property-pattern",
      "severity": "error",
    },
    {
      "column": 16,
      "endColumn": 18,
      "endLine": 10,
      "line": 10,
      "rule": "length-zero-no-unit",
      "severity": "error",
    },
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 10,
      "line": 10,
      "rule": "length-zero-no-unit",
      "severity": "error",
    },
    {
      "column": 1,
      "endColumn": 5,
      "endLine": 9,
      "line": 9,
      "rule": "no-descending-specificity",
      "severity": "error",
    },
    {
      "column": 20,
      "endColumn": 21,
      "endLine": 6,
      "line": 6,
      "rule": "no-irregular-whitespace",
      "severity": "error",
    },
  ],
]
`;

exports[`should verify CSS in styled-components 1`] = `
[
  [
    {
      "column": 30,
      "endColumn": 2,
      "endLine": 21,
      "line": 6,
      "rule": "no-missing-end-of-source-newline",
      "severity": "error",
    },
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 10,
      "line": 10,
      "rule": "alpha-value-notation",
      "severity": "error",
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 10,
      "line": 10,
      "rule": "color-function-notation",
      "severity": "error",
    },
    {
      "column": 16,
      "endColumn": 18,
      "endLine": 19,
      "line": 19,
      "rule": "length-zero-no-unit",
      "severity": "error",
    },
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 19,
      "line": 19,
      "rule": "length-zero-no-unit",
      "severity": "error",
    },
    {
      "column": 1,
      "endColumn": 5,
      "endLine": 18,
      "line": 18,
      "rule": "no-descending-specificity",
      "severity": "error",
    },
    {
      "column": 20,
      "endColumn": 21,
      "endLine": 10,
      "line": 10,
      "rule": "no-irregular-whitespace",
      "severity": "error",
    },
  ],
]
`;
